# bazel-toolchains

./: .bazelignore  .bazelrc  .gitignore  .goreleaser.yml  .travis.yml  BUILD  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS  MODULE.bazel  OWNERS  README.md  WORKSPACE  bazel_tests_cloudbuild.yaml  bazel_tests_incompatible_cloudbuild.yaml  cloudbuild.yaml  create_tag.sh  go.mod  go.sum  non_module_deps.bzl  rbe_autoconf_cloudbuild.yaml  renovate.json
.bazelci/: presubmit.yml
bazelrc/: .bazelrc  .bazelrc.test  .bazelrc.test.0.25.0  README.md  bazel-0.10.0.bazelrc  bazel-0.12.0.bazelrc  bazel-0.13.0.bazelrc  bazel-0.14.0.bazelrc  bazel-0.14.1.bazelrc  bazel-0.15.0.bazelrc  bazel-0.16.1.bazelrc  bazel-0.17.1.bazelrc  bazel-0.18.0.bazelrc  bazel-0.19.0.bazelrc  bazel-0.19.2.bazelrc  bazel-0.20.0.bazelrc  bazel-0.21.0.bazelrc  bazel-0.22.0.bazelrc  bazel-0.23.0.bazelrc  bazel-0.26.0.bazelrc  bazel-0.8.0.bazelrc  bazel-0.9.0.bazelrc  bazel-1.1.0.bazelrc  contrib.bazelrc  latest.bazelrc
constraints/: BUILD
container/: BUILD  README.md  build.py  build.sh  cloudbuild.yaml  cloudbuild_no_bucket.yaml  gcb_yaml_gen_utils.py
release/: bazelrc.py  bazelrc.tpl  config.py  config_release.py  cpp.tpl  default.tpl  license.tpl  msan.tpl  toolchain.bazelrc.tpl  toolchain_flags.py  util.py
repositories/: BUILD  go_repositories.bzl  images.bzl  repositories.bzl
rules/: .latest.bazelrc.tpl  BUILD  BUILD.java.tpl  BUILD.java_alias.tpl  BUILD.platform.tpl  BUILD.std_container.tpl  BUILD.std_toolchain.tpl  README.md  build_bazel_version.sh  docker_config.bzl  docker_config.sh.tpl  gcs.bzl  (+18 more)
(+629 files in other folders)
