bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_java", version = "8.16.1")
bazel_dep(name = "rules_cc", version = "0.0.17")

# Use pre-generated toolchain configs for the latest Bazel and latest Ubuntu 16.04
# container. Pre-generated configs are only provided as a convenience for
# experimenting with configuring Bazel for remote builds. Further, there are
# no guarantees on how long after a new release of Bazel or the Ubuntu 16.04
# container mentioned above the corresponding pre-generated configs will be
# available. So, never depend directly on the URL mentioned below to download
# toolchain configs in production because they may break without warning.
# For more information and alternatives, please visit:
# https://github.com/bazelbuild/bazel-toolchains#rbe_configs_gen---cli-tool-to-generate-configs
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rbe_default",
    # The sha256 digest of the tarball might change without notice. So it's not
    # included here. Please refer to the link mentioned above for instructions
    # on how to generate your own configs.
    urls = ["https://storage.googleapis.com/rbe-toolchain/bazel-configs/rbe-ubuntu1604/latest/rbe_default.tar"],
)
